--- a/src/python/workshop/.env.sample
+++ b/src/python/workshop/.env.sample
@@ -1,3 +1,3 @@
-MODEL_DEPLOYMENT_NAME="gpt-4o"
+MODEL_DEPLOYMENT_NAME="gpt-4o-mini"
 BING_CONNECTION_NAME="groundingwithbingsearch"
 PROJECT_CONNECTION_STRING=""
