--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -5,20 +5,13 @@ nav:
   - Solution Architecture: architecture.md
   - Security Considerations: security.md
   - Getting Started: getting-started.md
-  # - Workshop Setup:
-  #   - BUILD Attendees: introduction-event.md
-  #   - Self-Guided Learners: introduction-self-guided.md
-  - Lab 1 Function Calling Power: lab-1-function_calling.md
-  - Lab 2 Grounding with Documents: lab-2-file_search.md
-  - Lab 3 Intro to the Code Interpreter: lab-3-code_interpreter.md
-  - Lab 4 Grounding with Bing Search: lab-4-bing_search.md
-  - Lab 5 Multilingual Visualizations: lab-5-multilingual.md
-  - Lab 6 Finishing Up: finishing-up.md
+  - Part 1 Function Calling Power: lab-1-function_calling.md
+  - Part 2 Grounding with Documents: lab-2-file_search.md
+  - Part 3 Intro to the Code Interpreter: lab-3-code_interpreter.md
+  - Part 4 Multilingual Visualizations: lab-5-multilingual.md
+  - Part 5 Finishing Up: finishing-up.md
   - Summary: summary.md
   - Resources: resources.md
-  # - Deployment: deployment.md
-  # - Troubleshooting: troubleshooting.md
-
 
 plugins:
   - glightbox
